refactor(nui): Use chakra button instead of flex

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -18,3 +18,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+/* Disables chakra blue outline on button focus */
+:focus {
+  outline: 0 !important;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+}
