--- a/web/src/index.css
+++ b/web/src/index.css
@@ -24,3 +24,7 @@ code {
   outline: 0 !important;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
 }
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
