refactor(nui): Improve button design

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,7 @@
+html {
+  background-image: url('https://i.imgur.com/dc9l0AT.jpeg');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
