fix(nui): Import font

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
 /* html {
   background-image: url('https://i.imgur.com/dc9l0AT.jpeg');
 } */
