refactor(web): wip create a character dialog

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,12 +8,16 @@
   .hover-transition {
     @apply transition-all duration-200;
   }
+
+  .character-input {
+    @apply p-2 w-full outline-none bg-black/50 border-b-[1px] border-solid border-zinc-400 transition-all duration-300 focus:border-blue-400;
+  }
 }
 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
