refactor(web): character creation date verification

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -41,3 +41,11 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+input::-webkit-calendar-picker-indicator{
+  display: none;
+}
+
+input[type="date"]::-webkit-input-placeholder{
+  visibility: hidden !important;
+}
